# DexComX

./: 404.html  README.md  __init__ (3).py  __init__.py  add.md  aliases.md  eval-run.md  extension_manager.py  file-read.md  filter-delete.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml  view.md
commands/attributes/: index.html
commands/create/: index.html
commands/delete/: index.html
commands/eval-list/: index.html
commands/eval-remove/: index.html
commands/eval-run/: index.html
commands/eval-save/: index.html
commands/file-clear/: index.html
commands/file-delete/: index.html
commands/file-listdir/: index.html
commands/file-read/: index.html
commands/file-write/: index.html
commands/filter-delete/: index.html
commands/filter-update/: index.html
commands/filter-view/: index.html
commands/template-create/: index.html
commands/update/: index.html
commands/view/: index.html
dexscript_app/: apps.py
dexscript_app/dexscript_ext/: cog.py  commands.py  extension_manager.py  parser.py  utils.py
docs/: attributes.md  batch.md  create.md  file-clear.md  file-delete.md  filter-delete.md  filter-update.md  index.md  list.md  overview (2).md  overview.md  remove.md  update.md  view.md
docs/commands/: attributes.md  create.md  delete.md  eval-run.md  eval-save.md  file-write.md  filter-update.md  view.md
docs/extensions/: add.md  list.md  overview.md  remove.md  update.md
docs/syntax/: aliases.md  batch.md  comments.md  overview.md
extensions/add/: index.html
extensions/list/: index.html
search/: search_index.json
(+7 files in other folders)
