[project]
name = "dexcomx"
version = "0.0.0"
description = "DexComX is a scripting command suite for Ballsdex with modern aliases and flexible command separators."
authors = [
    { name = "haymooed" }
]

dependencies = [
    "python-dateutil>=2.9.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["dexscript_app"]
