[project]
name = "dexcomx"
version = "-.0.0"
description = "DexComX is a scripting command suite for BallsDex with speed aliases and extension package manager."
authors = [
    { name = "haymooed" }
]

dependencies = [
    "python-dateutil>=2.9.0",
    "toml>=0.10.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["dexscript_app"]